--- a/templates/projects/update_project.html
+++ b/templates/projects/update_project.html
@@ -69,12 +69,12 @@ You can use Markdown to format your description.", class="form-control hidden", 
                 <div id="epiceditor" class="form-control" data-textarea="long_description"></div>
                 {{ form_helper.render_field(form.category_id, class="form-control", visible='true') }}
                 {{ form_helper.render_field(form.allow_anonymous_contributors, class="form-control", visible='true') }}
+                {{ form_helper.render_field_horizontal(form.protect, class="form-control") }}
                 {{ form_helper.render_field(form.password, class="form-control", visible='true') }}
                 {{ form_helper.render_field(form.webhook, class="form-control", visible='true') }}
                 {{ form_helper.render_field(form.flickr_link, class="form-control", visible='true') }}
                 {{ form_helper.render_field(form.attribution, class="form-control", visible='true') }}
                 {{ form_helper.render_field(form.attribution_link, class="form-control", visible='true') }}
-                {{ form_helper.render_field_horizontal(form.hidden) }}
                 <div role="group" class="pull-right">
                     <a href="{{url_for('project.tasks', short_name=project.short_name)}}" class="btn btn-default">Cancel</a>
                   <button type="submit" name="btn" value="Save the changes" class="btn btn-danger">Save</button>
