--- a/templates/projects/presenter.html
+++ b/templates/projects/presenter.html
@@ -23,7 +23,7 @@
                     <a href="/"><i class="fa fa-home fa-3x"></i></a>
                 </div>
             </div>
-        {% else %}
+        {% endif %}
         {{ project.info.task_presenter|safe }}
     </div>
 </div>
