--- a/templates/home/_about.html
+++ b/templates/home/_about.html
@@ -11,7 +11,7 @@
                 <h1 class="inset-text-grey">About</h1>
                 
                 <p class="lead">{{brand}}, in association with <a href="http://labs.bl.uk/" target="_blank">BL Labs</a>, 
-                is a platform for hosting experimental crowdsourcing projects aimed at improving access to the the diverse
+                is a platform for hosting experimental crowdsourcing projects aimed at improving access to the diverse
 		collections held at the <a href="http://www.bl.uk" target="_blank">British Library</a>. By participating
 		in the crowdsourcing projects hosted here, you will have a direct impact on enabling future research at the
 		library.</p> 
