--- a/templates/projects/importers/flickr.html
+++ b/templates/projects/importers/flickr.html
@@ -2,6 +2,7 @@
 {% set active_page = "projects" %}
 {% import "projects/_helpers.html" as helper %}
 {% from "admin/_helpers.html" import render_local_nav %}
+{% set preload_js = "true" %}
 
 {% block content %}
 {% from "_formhelpers.html" import render_field %}
