--- a/templates/projects/importers/flickr.html
+++ b/templates/projects/importers/flickr.html
@@ -34,7 +34,7 @@
                     {% else %}
                     <h3>Select an album, then click import:</h3>
                     <div class="row">
-                        <ul>
+                        <ul id="albums">
                         {% for album in albums %}
                             <li class="col-md-3 col-sm-4 col-xs-12 text-center-xs flickr-thumbnails">
                                 <h4><strong>{{ album['title'] }}</strong></h4>
@@ -78,7 +78,7 @@
                 $('#grant').hide();
                 $('#albums-container').prepend('<p>'+"{{ _('Select one of your albums:') }}"+'</p>');
                 albums.forEach(function(album){
-                    var albumElement = $('<li class="col-md-4 col-sm-6 col-xs-12"><h4>'+album.title+'</h4><img src="'+album.thumbnail_url+'"><p class="small">'+album.photos+' {{ _('photos') }}</p><button id="'+album.id+'" class="btn btn-default btn-album">{{ _('Select') }}</button></li>');
+                    var albumElement = $('<li class="col-md-3 col-sm-4 col-xs-12 text-center-xs flickr-thumbnails"><h4><strong>'album.title'</strong></h4><img src="'+album.thumbnail+'" class="grey-border" alt="Flickr album thumbnail"><p class="small">'+album.photos+' photos</p><button id="'+album.id+'" class="btn btn-success btn-album">Select</button></li>'
                     $('#albums').append(albumElement);
                 });
             }
