--- a/templates/projects/importers/flickr.html
+++ b/templates/projects/importers/flickr.html
@@ -20,33 +20,23 @@
                                 <h3>From Flickr
                                 </div>
                               <div class="col-xs-2">
-                                    {% if albums %}
-                            <a href="{{ url_for('flickr.logout', next=url_for(target, short_name=project.short_name, type='flickr')) }}" class="btn btn-warning pull-right">Revoke access</a>
-                        {% endif %}
+                                    <div id="revoke">
+                              <a href="{{ url_for('flickr.logout', next=url_for(target, short_name=project.short_name, type='flickr')) }}" class="btn btn-warning pull-right" style="display:none;">Revoke access</a>
+                              </div>
                               </div>
                             </div>
                         
                     </h3>
-                    {% if not albums %}
+                    <div id="grant">
                        <p> To select an album click below to grant access to your Flickr account</p></br>
              
                     <p><a href="{{ url_for('flickr.login', next=url_for(target, short_name=project.short_name, type='flickr')) }}" class="btn btn-success">Log in to Flickr</a></p>
-                    {% else %}
+                    </div>
                     <h3>Select an album, then click import:</h3>
                     <div class="row">
                         <ul id="albums">
-                        {% for album in albums %}
-                            <li class="col-md-3 col-sm-4 col-xs-12 text-center-xs flickr-thumbnails">
-                                <h4><strong>{{ album['title'] }}</strong></h4>
-                                <img src="{{ album['thumbnail_url'] }}" class="grey-border" alt="Flickr album thumbnail">
-                                <p class="small">{{ album['photos'] }} photos</p>
-                                <button id="{{ album['id'] }}" class="btn btn-success btn-album">Select</button>
-                            </li>
-                        {% endfor %}
                         </ul>
                     </div>
-                    </br>
-                    {% endif %}
                     <br>
                     {% if form %}
                     <form role="form" method="post" action="{{ url_for(target, short_name=project.short_name) }}">
