--- a/templates/projects/importers/epicollect.html
+++ b/templates/projects/importers/epicollect.html
@@ -11,7 +11,7 @@
             <div class="row">
                 <div class="col-sm-9 col-sm-offset-3">
                     {% include "_flash_messages.html" %}
-                    {{ helper.render_loading("Importing tasks, this may take a while, please wait...") }}
+                    {{ helper.render_loading(loading_text) }}
                     <h1><strong>{{project.name}}</strong>: Import tasks</h1>
                   {% if form %}
                       <hr>
