Separate admin and project menus again

--- a/templates/admin/_helpers.html
+++ b/templates/admin/_helpers.html
@@ -15,41 +15,15 @@
 </tr>
 {% endmacro %}
 
-{% macro render_local_nav(current_user, active_link, active_project) %}
+{% macro render_admin_local_nav(current_user, active_link, active_project) %}
 <ul data-spy="affix" data-offset-top="200px" class="nav nav-list bs-docs-sidenav affix">
-{% if current_user.admin %}
-<li class="nav-link">
-    <a href="#" id="admin-options">Admin Options<i class="fa fa-angle-down pull-right"></i></a>
-    <ul class="nav nav-stacked inset-shadow remove-padding-top" id="admin-menu" hidden>
+    {% if current_user.admin %}
         <li class="nav-link"><a href="{{url_for('admin.index')}}">Dashboard</a></li>
         <li class="nav-link"><a href="{{url_for('admin.featured')}}">Featured</a></li>
         <li class="nav-link"><a href="{{url_for('admin.categories')}}">Categories</a></li>
         <li class="nav-link"><a href="{{url_for('admin.users')}}">Administrators</a></li>
         <li class="nav-link"><a href="{{url_for('admin.export_users', format='csv')}}">Export Users</a></li>
         <li class="nav-link"><a href="{{url_for('rq_dashboard.overview')}}">Background Jobs</a></li>
-    </ul>
-</li>
-{% endif %}
-    {% if current_user.admin %}
-    <li class="nav-link">
-        <a href="#" id="project-options">Project Options<i class="fa fa-angle-down pull-right"></i></a>
-        <ul class="nav nav-stacked inset-shadow remove-padding-top" id="project-menu" hidden>
-            <li class="nav-link"><a href="{{url_for('project.new')}}">New</a></li>
-            <li class="nav-link"><a href="{{ url_for('account.projects', name=current_user.name) }}">Open</a></li>
-            {% if active_project %}
-                <li class="divider"></li>
-                <li class="nav-link"><a href="{{url_for('project.tasks', short_name=active_project)}}">Dashboard</a></li>
-                <li class="nav-link"><a href="{{url_for('project.task_presenter_editor', short_name=active_project)}}">Code Editor</a></li>
-                <li class="nav-link"><a href="{{url_for('project.update', short_name=active_project)}}"> Project Details</a></li>
-                <li class="nav-link"><a href="{{url_for('project.auditlog', short_name=active_project)}}">Audit Logs</a></li>
-            {% endif %}
-        </ul>
-    </li>
-    {% endif %}
-    {% if active_project %}
-        <li class="nav-link{% if active_link=="info"%} active{% endif %}"><a href="{{url_for('blplugin.details', short_name=active_project)}}">Info</a></li>
-        <li class="nav-link{% if active_link=="contribute"%} active{% endif %}"><a href="{{url_for('project.presenter', short_name=active_project)}}"> Contribute</a></li>
-        <li class="nav-link{% if active_link=="statistics"%} active{% endif %}"><a href="{{url_for('project.show_stats', short_name=active_project)}}"> Statistics</a></li>
     {% endif %}
 </ul>
 {% endmacro %}
