--- a/templates/projects/new.html
+++ b/templates/projects/new.html
@@ -46,6 +46,6 @@
     $("i[rel='tooltip']").tooltip();
 </script>
 <script src="{{url_for('static', filename='vendor/EpicEditor-v0.2.2/js/epiceditor.min.js')}}" type="text/javascript"></script>
-<script src="{{url_for('static', filename='vendor/jquery.textchange.min.js')}}" type="text/javascript"></script>
+<script src="{{url_for('static', filename='js/vendor/jquery.textchange.min.js')}}" type="text/javascript"></script>
 <script src="{{url_for('static', filename='js/forms.js')}}" type="text/javascript"></script>
 {% endblock %}
