--- a/templates/projects/presenter.html
+++ b/templates/projects/presenter.html
@@ -9,8 +9,8 @@
             nope: '{{url_for('static', filename='js/vendor/json2.min.js')}}'
             });
 </script>
-<script src="{{url_for('static', filename="js/pybossa/pybossa.js")}}" type="text/javascript"></script>
-<script src="/static/vendor/jquery.serializejson.min.js" type="text/javascript"></script>
+<script src="{{url_for('static', filename='js/pybossa/pybossa.js')}}" type="text/javascript"></script>
+<script src="{{url_for('static', filename='js/vendor/jquery.serializejson.min.js')}}" type="text/javascript"></script>
     <div class="container-padded">
         <div class="container container-padded remove-padding-bottom">
         {% include "_flash_messages.html" %}
