Add separate minified CSS

--- a/templates/base.html
+++ b/templates/base.html
@@ -19,7 +19,7 @@
     <link href="https://google.com/+LibcrowdsBL" rel="publisher">
 
     <link type="text/css" rel="stylesheet" href="{{url_for('static', filename='vendor/bootstrap.min.css')}}">
-    <link type="text/css" rel="stylesheet" href="{{url_for('static', filename='css/styles.css')}}?v=2.6.8">
+    <link type="text/css" rel="stylesheet" href="{{url_for('static', filename='css/styles.min.css')}}?v=1.0.0">
     <link type="text/css" rel="stylesheet" href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400%7CPermanent+Marker">
     <link type="text/css" rel="stylesheet" href="{{url_for('static', filename='fonts/font-awesome-4.4.0/css/font-awesome.min.css')}}">
 
