--- a/templates/base.html
+++ b/templates/base.html
@@ -27,6 +27,7 @@
         <link type="text/css" rel="stylesheet" href="{{url_for('static', filename='fonts/font-awesome-4.4.0/css/font-awesome.min.css')}}">
 
         <!--[if lt IE 9]>
+        <script src="https://html5shim.googlecode.com/svn/trunk/html5.js"></script>
         <style>
             .ie-vcenter{position:relative;top:50%;transform:translateY(-50%);}
             .ie-mid-vcenter{position:relative;top:25%;transform:translateY(-25%);}
@@ -41,7 +42,6 @@
         <![endif]-->
 
         <!-- Le javascript -->
-        <script type="text/javascript" src="{{url_for('static', filename='js/vendor/html-shiv.js')}}"></script>
         <script type="text/javascript" src="{{url_for('static', filename='js/vendor/jquery-2.1.3.min.js')}}"></script>
         <script type="text/javascript" src="{{url_for('static', filename='js/vendor/jquery.cookie.min.js')}}"></script>
         <script type="text/javascript" src="{{url_for('static', filename='js/vendor/jquery.xdomainrequest.min.js')}}"></script>
