--- a/templates/_navbar.html
+++ b/templates/_navbar.html
@@ -20,7 +20,7 @@
             <ul class="nav navbar-nav">
               <li class="nav-link {% if active_page == 'about' %} active{% endif %}"><a href="{{ url_for('home.about')}}">About</a></li>
               <li class="nav-link {% if active_page == 'projects' %} active{% endif %}"><a href="{{ url_for('project.index') }}">Projects</a></li>
-              <li class="nav-link {% if active_page == 'globalstats' %} active{% endif %}"><a href="{{ url_for('statistics.index')}}">Statistics</a></li>
+              <li class="nav-link {% if active_page == 'statistics' %} active{% endif %}"><a href="{{ url_for('stats.index')}}">Statistics</a></li>
               <li class="nav-link"><a href="{{url_for('discourse.index')}}">Community
                         {% if current_user.is_authenticated() %}
                                         {% if current_user.info.notification_count and current_user.info.notification_count > 0 %}
