--- a/templates/_navbar.html
+++ b/templates/_navbar.html
@@ -21,7 +21,8 @@
               <li class="nav-link {% if active_page == 'about' %} active{% endif %}"><a href="{{ url_for('home.about')}}">About</a></li>
               <li class="nav-link {% if active_page == 'projects' %} active{% endif %}"><a href="{{ url_for('project.index') }}">Projects</a></li>
               <li class="nav-link {% if active_page == 'statistics' %} active{% endif %}"><a href="{{ url_for('stats.index')}}">Statistics</a></li>
-              <li class="nav-link"><a href="{{url_for('discourse.index')}}">Community
+              {% if 'pybossa_discourse' in plugins %}
+              <li class="nav-link"><a href="{{ url_for('discourse.index')}}">Community
                         {% if current_user.is_authenticated() %}
                                         {% if current_user.info.notification_count and current_user.info.notification_count > 0 %}
                                                 <span id="discourse-notifications" class="badge badge-danger">
@@ -32,7 +33,10 @@
                                         {% endif %}
                         {% endif %}
               </a></li>
-              <li class="nav-link {% if active_page == 'data' %} active{% endif %}"><a href="{{ url_for('data.index')}}">Data</a></li>
+              {% endif %}
+            {% if 'libcrowds_data_repo' in plugins %}
+                <li class="nav-link {% if active_page == 'data' %} active{% endif %}"><a href="{{ url_for('data.index')}}">Data</a></li>
+            {% endif %}
          </ul>
             {% include '_gcs_form.html' ignore missing %}
           {% if current_user.is_authenticated() %}
@@ -47,8 +51,12 @@
                     <li class="nav-link"><a href="{{ url_for('account.projects', name=current_user.name) }}"><i class="fa fa-folder-open"></i> Open Project</a></li>
                     {% endif %}
                     <li class="divider"></li>
-                  <li class="nav-link"><a href="{{ url_for('discourse.signout') }}"><i class="fa fa-power-off"></i> Sign Out</a></li>
-                </ul>
+                    {% if 'pybossa_discourse' in plugins %}
+                        <li class="nav-link"><a href="{{ url_for('discourse.signout') }}"><i class="fa fa-power-off"></i> Sign Out</a></li>
+                    {% else %}
+                        <li class="nav-link"><a href="{{ url_for('account.signout') }}"><i class="fa fa-power-off"></i> Sign Out</a></li>
+                    {% endif %}
+                  </ul>
               </li>
             </ul>
           {% endif %}
