Use pybossa-gravatar plugin

--- a/templates/account/update.html
+++ b/templates/account/update.html
@@ -38,6 +38,9 @@
                                     </div>
                                 </div>
                             {% endif %}
+                            {% if 'pybossa_gravatar' in plugins %}
+                                <a href="{{ url_for('set_gravatar', name=current_user.name) }}" class="btn btn-default">Use Gravatar</a>
+                            {% endif %}
                             {{ form_helper.render_field(upload_form.avatar, onchange="loadPreview()", class="form-control hidden") }}
                             {{ upload_form.x1 }}
                             {{ upload_form.y1 }}
