--- a/templates/_navbar.html
+++ b/templates/_navbar.html
@@ -1,71 +1,108 @@
-<div class="navbar navbar-fixed-top navbar-default notransition
-{% if not active_page == 'index' and not has_splash == 'true' %}opaque{% endif %}">
-        <div class="container">
-          <div class="navbar-header">
+<div class="navbar navbar-fixed-top navbar-default notransition {% if not active_page == 'index' and not has_splash == 'true' %}opaque{% endif %}">
+    <div class="container">
+        <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
             </button>
-          <var id="logo-black" data-src="{{url_for('static',filename='img/logo-dark-plain.png')}}"></var>
-          <var id="logo-white" data-src="{{url_for('static',filename='img/logo-white-plain.png')}}"></var>
-          <a class="navbar-brand" href="{{ url_for('home.home') }}"><img id="navbar-logo"
-          {% if not active_page == 'index' and not has_splash == 'true' %}
-                  src="{{url_for('static',filename='img/logo-dark-plain.png')}}"
-          {% else %}
-                  src="{{url_for('static',filename='img/logo-white-plain.png')}}"
-          {% endif %} alt="{{brand}} logo" /></a>
-          </div>
-          <div id="navbar" class="navbar-collapse collapse">
-            <ul class="nav navbar-nav">
-              <li class="nav-link {% if active_page == 'about' %} active{% endif %}"><a href="{{ url_for('home.about')}}">About</a></li>
-              <li class="nav-link {% if active_page == 'projects' %} active{% endif %}"><a href="{{ url_for('project.index') }}">Projects</a></li>
-              <li class="nav-link {% if active_page == 'statistics' %} active{% endif %}"><a href="{{ url_for('stats.index')}}">Statistics</a></li>
-              {% if 'pybossa_discourse' in plugins %}
-              <li class="nav-link"><a href="{{ url_for('discourse.index')}}">Community
-                        {% if current_user.is_authenticated() %}
-                                        {% if current_user.info.notification_count and current_user.info.notification_count > 0 %}
-                                                <span id="discourse-notifications" class="badge badge-danger">
-                                                        {{current_user.info.notification_count}}
-                                                </span>
-                                        {% else %}
-                                                <span id="discourse-notifications" class="badge badge-danger"></span>
-                                        {% endif %}
-                        {% endif %}
-              </a></li>
-              {% endif %}
-            {% if 'libcrowds_data_repo' in plugins %}
-                <li class="nav-link {% if active_page == 'data' %} active{% endif %}"><a href="{{ url_for('data.index')}}">Data</a></li>
-            {% endif %}
-         </ul>
-            {% include '_gcs_form.html' ignore missing %}
-          {% if current_user.is_authenticated() %}
-            <ul class="nav navbar-nav navbar-right">
-                <li class="nav-link"><a href="#" data-toggle="dropdown" class="dropdown-toggle"><i class="icon fa fa-user"></i> {{ current_user.name | truncate(10,true) }} <span class="caret"></span></a>
-                  <ul class="dropdown-menu">
-                    <li class="nav-link"><a href="{{ url_for('account.profile', name=current_user.name) }}"><i class="fa fa-user"></i> Profile</a></li>
-                    <li class="nav-link"><a href="{{ url_for('account.update_profile', name=current_user.name) }}"><i class="fa fa-cog"></i> Settings</a></li>
-                    {% if current_user.admin == 1 %}
-                    <li class="divider"></li>
-                    <li class="nav-link"><a href="{{ url_for('admin.index') }}"><i class="fa fa-cog"></i> Admin</a></li>
-                    <li class="nav-link"><a href="{{ url_for('account.projects', name=current_user.name) }}"><i class="fa fa-folder-open"></i> Open Project</a></li>
-                    {% endif %}
-                    <li class="divider"></li>
-                    {% if 'pybossa_discourse' in plugins %}
-                        <li class="nav-link"><a href="{{ url_for('discourse.signout') }}"><i class="fa fa-power-off"></i> Sign Out</a></li>
-                    {% else %}
-                        <li class="nav-link"><a href="{{ url_for('account.signout') }}"><i class="fa fa-power-off"></i> Sign Out</a></li>
-                    {% endif %}
-                  </ul>
-              </li>
-            </ul>
-          {% endif %}
 
-            {% if current_user.is_anonymous() %}
-            <ul class="nav navbar-nav navbar-right">
-              <li class="nav-link"><a href="{{ url_for('account.signin') }}">Sign in</a></li>
-            </ul>
-            {% endif %}
-          </div><!--/.nav-collapse -->
+            <!-- Set logo -->
+            <var id="logo-black" data-src="{{url_for('static',filename='img/logo-dark-plain.png')}}"></var>
+            <var id="logo-white" data-src="{{url_for('static',filename='img/logo-white-plain.png')}}"></var>
+            <a class="navbar-brand" href="{{ url_for('home.home') }}">
+                <img id="navbar-logo"
+                {% if not active_page == 'index' and not has_splash == 'true' %}
+                        src="{{url_for('static',filename='img/logo-dark-plain.png')}}"
+                {% else %}
+                        src="{{url_for('static',filename='img/logo-white-plain.png')}}"
+                {% endif %} alt="{{brand}} logo" />
+            </a>
+
         </div>
-      </div>
+    <div id="navbar" class="navbar-collapse collapse">
+        <ul class="nav navbar-nav">
+            <li class="nav-link {% if active_page == 'about' %} active{% endif %}">
+                <a href="{{ url_for('home.about')}}">About</a>
+            </li>
+            <li class="nav-link {% if active_page == 'projects' %} active{% endif %}">
+                <a href="{{ url_for('project.index') }}">Projects</a>
+            </li>
+            <li class="nav-link {% if active_page == 'statistics' %} active{% endif %}">
+                <a href="{{ url_for('stats.index')}}">Statistics</a>
+            </li>
+
+            <!-- Use pybossa-discourse plugin if available -->
+            {% if 'pybossa_discourse' in plugins %}
+            <li class="nav-link">
+                <a href="{{ url_for('discourse.index')}}">Community
+
+                {% if current_user.is_authenticated() %}
+                    {% if current_user.info.notification_count and current_user.info.notification_count > 0 %}
+                        <span id="discourse-notifications" class="badge badge-danger">
+                            {{current_user.info.notification_count}}
+                        </span>
+                    {% else %}
+                        <span id="discourse-notifications" class="badge badge-danger"></span>
+                    {% endif %}
+                {% endif %}
+                </a>
+            </li>
+            {% endif %}
+
+            <!-- Use the libcrowds-data-repo plugin, if available -->
+            {% if 'libcrowds_data_repo' in plugins %}
+                <li class="nav-link {% if active_page == 'data' %} active{% endif %}">
+                    <a href="{{ url_for('data.index')}}">Data</a>
+                </li>
+            {% endif %}
+        </ul>
+
+        <!-- Search form -->
+        {% include '_gcs_form.html' ignore missing %}
+
+        {% if current_user.is_authenticated() %}
+        <ul class="nav navbar-nav navbar-right">
+            <li class="nav-link">
+                <a href="#" data-toggle="dropdown" class="dropdown-toggle">
+                    <i class="icon fa fa-user"></i> {{ current_user.name | truncate(10,true) }} <span class="caret"></span>
+                </a>
+                <ul class="dropdown-menu">
+                <li class="nav-link">
+                    <a href="{{ url_for('account.profile', name=current_user.name) }}"><i class="fa fa-user"></i> Profile</a></li>
+                <li class="nav-link">
+                    <a href="{{ url_for('account.update_profile', name=current_user.name) }}"><i class="fa fa-cog"></i> Settings</a></li>
+
+                {% if current_user.admin %}
+                <li class="divider" />
+                <li class="nav-link">
+                    <a href="{{ url_for('admin.index') }}"><i class="fa fa-cog"></i> Admin</a>
+                </li>
+                <li class="nav-link">
+                    <a href="{{ url_for('account.projects', name=current_user.name) }}"><i class="fa fa-folder-open"></i> Open Project</a>
+                </li>
+                {% endif %}
+
+                <li class="divider"></li>
+
+                <!-- Use pybossa-discourse plugin, if available -->
+                {% if 'pybossa_discourse' in plugins %}
+                    <li class="nav-link">
+                        <a href="{{ url_for('discourse.signout') }}"><i class="fa fa-power-off"></i> Sign Out</a>
+                    </li>
+                {% else %}
+                    <li class="nav-link">
+                        <a href="{{ url_for('account.signout') }}"><i class="fa fa-power-off"></i> Sign Out</a>
+                    </li>
+                {% endif %}
+
+              </ul>
+            </li>
+        </ul>
+        {% else %}
+        <ul class="nav navbar-nav navbar-right">
+            <li class="nav-link"><a href="{{ url_for('account.signin') }}">Sign in</a></li>
+        </ul>
+        {% endif %}
+    </div>
+</div>
